Add geographical coordinates to network for NAD drawing and use GeographicalLayout (#102)
Signed-off-by: maissa SOUISSI <maissa.souissi@rte-france.com>